syntax = "proto3";

option csharp_namespace = "ApiGrpc.Api.Services.GrpcServices";

service AuthGrpc {
    rpc Login (LoginRequest) returns (AuthResponse);
    rpc Register (RegisterRequest) returns (AuthResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string firstName = 3;
    string lastName = 4;
    string role = 5;
}

message AuthResponse {
    string token = 1;
    string email = 2;
    string firstName = 3;
    string lastName = 4;
    string role = 5;
}


